--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 } */
+
+@font-face {
+  font-family: "HarryP";
+  src: url("/HARRYP__.TTF") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.harryp {
+  font-family: "HarryP", sans-serif;
+}
