added about page

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,15 @@ body {
 .harryp {
   font-family: "HarryP", sans-serif;
 }
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
